2016-07-11  Tadashi MATSUO  <tad@mymail.twin.jp>

	* twittering-mode.el: Render retweets posted by yourself.
	(twittering-render-timeline): render a retweet if it is posted by
	the current account.

2016-07-10  Tadashi MATSUO  <tad@mymail.twin.jp>

	* update-cert.sh: Update the URL of the CA certificates.

	* twittering-mode.el: Update the embedded CA certificates with the
	latest https://curl.haxx.se/ca/cacert.pem .
	(twittering-ca-cert-list): update the CA certificates.
	* update-cert.sh: Remove 'equifax', which is no longer included in
	the CA certificates.

	* twittering-mode.el: Add the CA certificate of GeoTrust Global CA
	as one of embedded CA certificates. The added certificate is used
	for a HTTPS connection for Google URL Shortener, `goo.gl'.
	(twittering-ca-cert-list): update CA certificates.
	* update-cert.sh: Retrieve CA certificates of GeoTrust Global CA.

2016-07-03  Tadashi MATSUO  <tad@mymail.twin.jp>

	* twittering-mode.el: Import the patches by nabeo. The regular
	expressions of HTTP/2 responses are updated so that it works well
	with the latest version of curl.
	(twittering-make-header-info-alist): update the regexp.
	(twittering-pre-process-buffer-curl): likewise.
	(twittering-oauth-get-response-alist): likewise.

	* twittering-mode.el: Fix regular expressions including a literal
	period ".".
	(twittering-make-header-info-alist): fix a regexp.
	(twittering-pre-process-buffer-curl): likewise.
	(twittering-oauth-get-response-alist): likewise.

	* twittering-mode.el: Accept HTTP responses generated by old
	versions of curl. The regular expressions of HTTP responses are
	updated so that they match headers starting with "HTTP/2.0".
	(twittering-make-header-info-alist): update the regexp.
	(twittering-pre-process-buffer-curl): likewise.
	(twittering-oauth-get-response-alist): likewise.

2016-06-17  Tadashi MATSUO  <tad@mymail.twin.jp>

	* twittering-mode.el: You can retweet your own tweets.